feat: add prominent startup logs for better Render visibility

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Helpdesk - Gestion de Tickets</title>
     <meta name="description" content="Application de gestion de tickets de support - Projet RNCP CDA" />
+    <!-- Configuration runtime (optionnel, peut être modifié après le build) -->
+    <script src="/config.js"></script>
   </head>
   <body>
     <div id="root"></div>
